# omim

./: .clang-format  CMakeLists.txt  defines.hpp
base/: CMakeLists.txt  allocator_profiler.cpp  allocator_profiler.hpp  logging.cpp  logging.hpp  non_intersecting_intervals.hpp
drape_frontend/: frontend_renderer.cpp  my_position_controller.cpp  read_metaline_task.cpp
generator/: CMakeLists.txt  borders.cpp  collector_city_area.cpp  collector_city_area.hpp  collector_routing_city_boundaries.cpp  collector_routing_city_boundaries.hpp  feature_builder.hpp  feature_maker.cpp  filter_collection.cpp  filter_planet.cpp  final_processor_intermediate_mwm.cpp  intermediate_data.hpp  osm2type.cpp  osm_element_helpers.cpp  polygonizer.hpp  restriction_collector.hpp  routing_city_boundaries_processor.cpp  routing_city_boundaries_processor.hpp  routing_index_generator.cpp  routing_index_generator.hpp  search_index_builder.cpp  translator.cpp
geometry/: distance_on_sphere.cpp  distance_on_sphere.hpp  latlon.cpp  (+3 more)
poly_borders/: CMakeLists.txt  borders_data.cpp  borders_data.hpp  help_structures.cpp  help_structures.hpp  main.cpp
poly_borders/poly_borders_tests/: CMakeLists.txt  area_tests.cpp  mark_points_tests.cpp  remove_empty_spaces_tests.cpp  tools.cpp  tools.hpp
poly_borders/poly_borders_tool/: CMakeLists.txt  poly_borders_tool.cpp
poly_borders/src/: CMakeLists.txt  borders_data.cpp  borders_data.hpp  help_structures.cpp  help_structures.hpp
poly_borders/tests/: CMakeLists.txt  area_tests.cpp  mark_points_tests.cpp  remove_empty_spaces_tests.cpp  tools.cpp  tools.hpp
(+119 files in other folders)
